set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS TRUE)
set(BUILD_SHARED_LIBS FALSE)

file(GLOB ENGINE_INC
        CONFIGURE_DEPENDS
        ${CMAKE_CURRENT_SOURCE_DIR}/*.h
        ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp
)

file(GLOB ENGINE_INC_COMPONENTS
        CONFIGURE_DEPENDS
        ${CMAKE_CURRENT_SOURCE_DIR}/components/*.h
        ${CMAKE_CURRENT_SOURCE_DIR}/components/*.hpp
)

file(GLOB ENGINE_SRC
        CONFIGURE_DEPENDS
        ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/*.c
)

file(GLOB ENGINE_SRC_COMPONENTS
        CONFIGURE_DEPENDS
        ${CMAKE_CURRENT_SOURCE_DIR}/components/*.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/components/*.c
)

SET(ENGINE_INC_DIR ${CMAKE_CURRENT_SOURCE_DIR} CACHE PATH "ENGINE INCLUDE SOURCE PATH")

add_library (engine STATIC ${ENGINE_SRC} ${ENGINE_SRC_COMPONENTS} ${ENGINE_INC} ${ENGINE_INC_COMPONENTS})

target_link_libraries(engine glm)

install (TARGETS engine DESTINATION lib)
install (FILES ${ENGINE_INC} DESTINATION include/engine)
install (FILES ${ENGINE_INC_COMPONENTS} DESTINATION include/engine/components)

include_directories(${ENGINE_INC_DIR})